repaired position of the button

--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,10 @@ button {
 	border: 1px solid;
 }
 p {
+	min-height: 115px;
 	color: hsla(0, 0%, 100%, 0.75);
 	line-height: 1.5em;
+	
 }
 p span {
 	text-transform: uppercase;
